tests/ui/coherence/coherence-impls-copy.stderr
error[E0119]: conflicting implementations of trait `Copy` for type `&NotSync`
  --> $DIR/coherence-impls-copy.rs:29:1
   |
LL | impl Copy for &'static NotSync {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<T> Copy for &T
             where T: ?Sized;

error[E0119]: conflicting implementations of trait `Copy` for type `&[NotSync]`
  --> $DIR/coherence-impls-copy.rs:34:1
   |
LL | impl Copy for &'static [NotSync] {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<T> Copy for &T
             where T: ?Sized;

error[E0206]: the trait `Copy` cannot be implemented for this type
  --> $DIR/coherence-impls-copy.rs:22:15
   |
LL | impl Copy for &'static mut MyType {}
   |               ^^^^^^^^^^^^^^^^^^^ type is not a structure or enumeration

error[E0206]: the trait `Copy` cannot be implemented for this type
  --> $DIR/coherence-impls-copy.rs:26:15
   |
LL | impl Copy for (MyType, MyType) {}
   |               ^^^^^^^^^^^^^^^^ type is not a structure or enumeration

error[E0206]: the trait `Copy` cannot be implemented for this type
  --> $DIR/coherence-impls-copy.rs:31:15
   |
LL | impl Copy for [MyType] {}
   |               ^^^^^^^^ type is not a structure or enumeration

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0119, E0206.
For more information about an error, try `rustc --explain E0119`.
